test/bad/classes/type04.px

class A def
    Int x

class B(A) def
    Int y


func f({A} a) def
    return

b = {B()}
f(b)
